--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs every 24 hours
+    # - cron: "0 0 * * *" # Runs every 24 hours
+    - cron: "0 */12 * * *" # Runs every 12 hours
   workflow_dispatch: # Allows manual triggering
 
 jobs:
