--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,10 @@
-# name: Generate Snake
-
-# on:
-#   schedule:
-#     - cron: "0 0 * * *" # Runs every 24 hours
-#     # - cron: "0 */12 * * *" # Runs every 12 hours
-#   workflow_dispatch: # Allows manual triggering
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: Platane/snk@master
-#         id: snake-gif
-#         with:
-#           github_user_name: YOUR_GITHUB_USERNAME
-#           gif_out_path: dist/github-contribution-grid-snake.gif
-#           svg_out_path: dist/github-contribution-grid-snake.svg
-#       - run: git status
-#       - name: Push changes
-#         uses: ad-m/github-push-action@master
-#         with:
-#           github_token: ${{ secrets.GITHUB_TOKEN }}
-#           branch: main
-#           force: true
-#       - uses: crazy-max/ghaction-github-pages@v2.1.3
-#         with:
-#           target_branch: output
-#           build_dir: dist
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-
 name: generate animation
 
 on:
   # run automatically every 24 hours
   schedule:
     - cron: "0 0 * * *"
+    # - cron: "0 */12 * * *" # Runs every 12 hours
   
   # allows to manually run the job at any time
   workflow_dispatch:
@@ -47,8 +13,6 @@ on:
   push:
     branches:
     - main
-    
-  
 
 jobs:
   generate:
@@ -67,9 +31,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
           
-          
       # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
